--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
   }
 body{
     background-image: url("./1580007.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
   /* For Non-Webkit Browsers
