--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@
     background-color: #888;
     border-radius: 6px;
   }
-body{
+/* body{
     background-image: url("./1580007.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
   /* For Non-Webkit Browsers
   scrollbar-color: #888 #f2f2f2;
