--- a/src/home/nav/NavBar.css
+++ b/src/home/nav/NavBar.css
@@ -1,35 +1,40 @@
- .logo{
-    width: 60px;
-    float: left;
+ .logo {
+     width: 60px;
+     float: left;
  }
+
  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
+     margin: 0;
+     font-family: Arial, Helvetica, sans-serif;
+ }
+
 
  /* Add a black background color to the top navigation */
  .topnav {
-     background-image:linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255, 0));
+     background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgba(0, 0, 0, 0));
      overflow: hidden;
      height: 60px;
      padding: 10px;
      padding-right: 10%;
      padding-left: 10%;
      transition: 300ms;
-
+     position: fixed;
+     top: 0;
+     width: 80%;
+     z-index: 1000;
+     height: 80px;
  }
 
  /* Style the links inside the navigation bar */
  .topnav .menu {
      float: right;
      display: block;
-     color:  rgb(175, 173, 173);
+     color: rgb(175, 173, 173);
      text-align: center;
      padding: 14px 16px;
      text-decoration: none;
      font-size: 17px;
-     
+
  }
 
  /* Change the color of links on hover */
@@ -42,17 +47,18 @@
  /* Hide the link that should open and close the topnav on small screens */
  .topnav .icon {
      display: none;
-     background-color:transparent;
+     background-color: transparent;
      color: #fff;
      border: none;
      padding: 10px;
-     
+
  }
+
  .topnav .icon:hover {
-    color: #fff;
-    border: none;
-    
-}
+     color: #fff;
+     border: none;
+
+ }
 
  @media screen and (max-width: 600px) {
      .topnav .menu:not(:first-child) {
@@ -63,8 +69,9 @@
          float: right;
          display: block;
      }
-     .logo{
-        width: 40px;
+
+     .logo {
+         width: 60px;
 
      }
  }
@@ -73,23 +80,23 @@
  @media screen and (max-width: 600px) {
      .topnav.responsive {
          position: relative;
-         
          height: 300px;
      }
 
      .topnav.responsive .icon {
          position: absolute;
-         background-color:#6d6d6d56;
+         background-color: #6d6d6d56;
          margin-right: 10%;
          right: 10px;
          top: 10px;
      }
 
      .topnav.responsive .logo {
-        float: none;
-        display: block;
-        text-align: left;
-    }
+         float: none;
+         display: block;
+         text-align: left;
+     }
+
      .topnav.responsive .menu {
          float: none;
          display: block;
