--- a/src/calculator/style/radio.css
+++ b/src/calculator/style/radio.css
@@ -1,5 +1,5 @@
 div.radio-with-Icon {
-    display: block;
+    display: flex;
 }
 
 div.radio-with-Icon p.radioOption-Item {
@@ -51,7 +51,7 @@ div.radio-with-Icon p.radioOption-Item label {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 div.radio-with-Icon p.radioOption-Item input[type="radio"] {
