--- a/src/calculator/style/tableCalcul.css
+++ b/src/calculator/style/tableCalcul.css
@@ -14,3 +14,8 @@ table {
   tr:nth-child(even) {
     background-color: #dddddd;
   }
+  @media print{
+    .dont-print{
+      display: none;
+    }
+  }
