--- a/src/calculator/style/form.css
+++ b/src/calculator/style/form.css
@@ -5,7 +5,6 @@
     align-items: center;
 }
 
-
 .choiceButton{
     padding: 60px 30px;
     margin: 10px;
@@ -28,4 +27,9 @@
     color: #fff;
     border: 1px #08c9c9 solid;
     box-shadow: 0 0 20px 1px #c9c9c9;
+}
+.cont{
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
 }
