--- a/src/calculator/style/tableCalcul.css
+++ b/src/calculator/style/tableCalcul.css
@@ -1,21 +1,25 @@
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 60%;
-    margin: auto;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin: auto;
+}
+
+th {
+  border: 1px solid #a3a3a3;
+  text-align: left;
+  padding: 5px;
+}
+
+td {
+  border: 1px solid #a3a3a3;
+  text-align: left;
+  padding: 5px;
+  line-height: 2px;
+}
+
+@media print {
+  .dont-print {
+    display: none;
   }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-  @media print{
-    .dont-print{
-      display: none;
-    }
-  }
+}
