--- a/src/calculator/style/checkbox.css
+++ b/src/calculator/style/checkbox.css
@@ -90,5 +90,6 @@ div.radio-with-Icon p.radioOption-Item input[type="checkbox"]+label:after {
 
 .view-card{
     overflow-y: auto;
-    height: 200px;
+    height: 400px;
+    text-align: center;
 }
