--- a/src/calculator/style/tableCalcul.css
+++ b/src/calculator/style/tableCalcul.css
@@ -18,8 +18,25 @@ td {
   line-height: 2px;
 }
 
+.printable-section {
+  overflow-y: auto;
+  height: 80%;
+}
+
 @media print {
   .dont-print {
     display: none;
+  }
+
+  .printable-section {
+    position: absolute;
+    top: -100px;
+    transform: scale(1.2);
+    left: 0;
+    height: 100%;
+    width: 1000px;
+    margin-top: -100px;
+    margin: -40px;
+    padding: 0;
   }
 }
