--- a/src/calculator/style/form.css
+++ b/src/calculator/style/form.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .choiceButton{
@@ -32,4 +33,5 @@
     display: flex;
     justify-content: center;
     margin-top: 10%;
+    flex-wrap: wrap;
 }
