--- a/src/calculator/style/tableCalcul.css
+++ b/src/calculator/style/tableCalcul.css
@@ -30,13 +30,12 @@ td {
 
   .printable-section {
     position: absolute;
-    top: -100px;
-    transform: scale(1.2);
-    left: 0;
-    height: 100%;
-    width: 1000px;
+    top: -80px;
+    transform: scale(1);
+    left: -80px;
+    height: 1100px;
+    width: 700px;
     margin-top: -100px;
-    margin: -40px;
     padding: 0;
   }
 }
