--- a/src/home/style.css
+++ b/src/home/style.css
@@ -25,3 +25,40 @@
         background-color:transparent;
     }
 }
+
+.btn{
+    background-color: #009997;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius:10px ;
+    font-weight: bold;
+    font-size: 15px;
+    transition: 200ms;
+    margin: 5px;
+}
+.btn:hover{
+    background-color: #027472;
+}
+.autbtn{
+    background-color: transparent;
+    color: #009997;
+    border: 1px solid #009997;
+    padding: 10px 20px;
+    border-radius:10px ;
+    font-weight: bold;
+    font-size: 15px;
+    transition: 200ms;
+    margin: 5px;
+}
+.autbtn:hover{
+    color: #027472;
+    border: 1px solid #027472;
+}
+
+@media (max-width:600px){
+    .btn {
+    width: 250px;
+    margin-top: 30px;
+    }
+}
