--- a/src/calculator/style/tableCalcul.css
+++ b/src/calculator/style/tableCalcul.css
@@ -23,6 +23,14 @@ td {
   height: 80%;
 }
 
+@media (max-width:600px) {
+  .centerbtn{
+    display: flex;
+    justify-content: center;
+  }
+}
+
+
 @media print {
   .dont-print {
     display: none;
