--- a/src/nosprojet/cardstyle.css
+++ b/src/nosprojet/cardstyle.css
@@ -1,6 +1,6 @@
 .card-container {
-  width: 300px;
-  height: 200px;
+  width: 500px;
+  height: 250px;
   position: relative;
   border-radius: 10px;
 }
@@ -33,10 +33,14 @@
 }
 
 .card .img-content img {
-  width: 200px;
-  height: 200px;
+  width: 450px;
   fill: #212121;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+.card .img-content h1 {
+  width: 450px;
+  color: #fff;
+  text-align: center;
 }
 
 .card .content {
@@ -79,4 +83,15 @@
 
 .card:hover .img-content img {
   fill: transparent;
+}
+
+@media (max-width:600px) {
+  .card-container{
+    width: 300px;
+    height: 200px;
+  }
+  .card .img-content img {
+    width: 300px;
+  }
+  
 }
