--- a/src/about/style.css
+++ b/src/about/style.css
@@ -1,6 +1,7 @@
 .aboutcontent{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     color: #fff;
     padding: 10px;
 }
@@ -15,20 +16,25 @@
 }
 .aboutheader{
     display: flex;
-    width: 100%;
+    width: 30%;
     justify-content: center;
+    align-items: center;
 }
 .aboutname{
     display: flex;
     justify-content: center;
     width: 100%;
+    text-align: center;
 }
 .aboutlogo{
-    width: 80px;
+    width: 100px;
 }
 .aboutbar{
     background-color: #fff;
+    border: #fff 2px solid;
+    border-radius: 20px;
     width: 2px;
+    height: 100%;
     margin: 10px;
 }
 .aboutbutton{
@@ -36,4 +42,20 @@
     justify-content: center;
     width: 100%;
     margin: 2%;
+}
+@media (max-width:900px){
+    .aboutbar{
+        width: 100%;
+        height: 2px;
+    }
+    .aboutheader{
+        flex-direction: column;
+        width: 100%;
+    }
+    .aboutpara{
+        width: 100%;
+    }
+    .aboutlogo{
+        width: 40%;
+    }
 }
