--- a/src/home/content/intro.css
+++ b/src/home/content/intro.css
@@ -23,16 +23,16 @@
 
 
 .introBtn {
-    width: 30%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    margin: auto;
+    margin: auto!important;
+    justify-content: center;
 }
 
 .introCentre {
     margin: auto !important;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 80%;
     margin-top: 3%!important;
     
@@ -87,6 +87,7 @@
     .introBtn {
         margin-top: 20px;
         width: 100%;
+        flex-direction: column;
 
     }
     .introCentre img {
