--- a/src/home/style.css
+++ b/src/home/style.css
@@ -4,6 +4,7 @@
     transform:translate(13%,20%);
     width: 80%;
     height: 80%;
+    overflow: auto;
     margin-bottom: 100px;
     background-color: rgba(107, 106, 106, 0.322);
     border-radius: 12px;
@@ -25,6 +26,7 @@
 @media print{
     .body-calcul{
         background-color:transparent;
+        overflow: visible;
     }
 }
 
